--- a/css/style.css
+++ b/css/style.css
@@ -1132,8 +1132,12 @@ h1, h2, h3, h4, h5,
   font-size: .9rem; }
   .post-entry-2 .thumbnail {
     background-size: cover;
-    background-position: auto;
-    width: 50%; }
+    background-position-x: center;
+    background-position-y: top;
+    width: 50%;
+    background-size: 100%;
+    background-repeat: no-repeat;
+  }
   .post-entry-2 .contents {
     width: 70%;
     padding: 10px 20px; }
@@ -1315,4 +1319,31 @@ blockquote {
   padding: 4rem 4rem;
   border-left: 4px solid black;
   position: relative;
+  }
+
+.banner {
+    width: 100%;
+    height: 400px;
+    background-image: url('JannikSchilling.png');
+    background-position: center center;
+    background-size: cover;
+  }
+
+.hero-image {
+    background-image: url("/w3images/photographer.jpg");
+    background-color: #cccccc;
+    height: 500px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+  }
+  
+  .hero-text {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
   }
