--- a/css/style.css
+++ b/css/style.css
@@ -1035,24 +1035,24 @@ h1, h2, h3, h4, h5,
     font-size: 18px;
     margin-bottom: 15px; }
 
-.Kategorien li, .sidelink li {
+.categories li, .sidelink li {
   position: relative;
   margin-bottom: 10px;
   padding-bottom: 10px;
   border-bottom: 1px dotted #dee2e6;
   list-style: none; }
-  .Kategorien li:last-child, .sidelink li:last-child {
+  .categories li:last-child, .sidelink li:last-child {
     margin-bottom: 0;
     border-bottom: none;
     padding-bottom: 0; }
-  .Kategorien li a, .sidelink li a {
+  .categories li a, .sidelink li a {
     display: block; }
-    .Kategorien li a span, .sidelink li a span {
+    .categories li a span, .sidelink li a span {
       position: absolute;
       right: 0;
       top: 0;
       color: #ccc; }
-  .Kategorien li.active a, .sidelink li.active a {
+  .categories li.active a, .sidelink li.active a {
     color: #000;
     font-style: italic; }
 
