--- a/css/style.css
+++ b/css/style.css
@@ -1296,10 +1296,143 @@ h1, h2, h3, h4, h5,
 .search-form p {
   font-size: .9rem; }
 
-.footer {
-  font-size: .85rem;
-  text-align: center;
-  padding: 2rem 0; }
+footer {
+  background: #f1f1f1;
+  padding: 90px 0;
+}
+
+.footer-container {
+  width: 100%
+}
+
+.footer-right{
+  width: 33.33%;
+  padding-left: 50px;
+  float: left;
+  padding-right: 50px;
+}
+
+.footer-left{
+  width: 33.33%;
+  float: left;
+  padding-left: 50px;
+}
+
+.footer-center{
+  width: 33.33%;
+  float: left;
+  padding-left: 50px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.logo {
+  width: 90%;
+}
+
+.social-media{
+  margin: 20px 0;
+} 
+
+
+.social-media a {
+  color: #001a21;
+  margin-right: 25px;
+  font-size: 22px;
+  text-decoration: none;
+  transition: .3s linear;
+}
+
+.social media a:hover{
+  color: #fc5c65;
+}
+
+.right-col h1{
+  font-size: 26px;
+}
+
+.border {
+  width: 100px;
+  height: 4px;
+  background: #fc5c65;
+}
+
+.newsletter-form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.txtb {
+  flex: 1;
+  padding: 18px 25px;
+  font-size: 14px;
+  color: #293043;
+  background: #ddd;
+  border: none;
+  font-weight: 700;
+  outline: none;
+  border-radius: 30px;
+  min-width: 150px;
+  width: 70%;
+}
+
+.btn-sub {
+  flex: 1;
+  padding: 18px 10px;
+  font-size: 12px;
+  color: #293043;
+  background: #ddd;
+  border: none;
+  font-weight: 700;
+  outline: none;
+  border-radius: 25px;
+  min-width: 60px;
+  width: 25%;
+}
+
+@media screen and (max-width: 960px) {
+  .footer-container{
+    max-width: 800px;
+  }
+
+  .footer-container p{
+    font-size: 16px;
+  }
+
+  .footer-left {
+    width: 100%;
+    margin-bottom: 60px;
+    padding-right: 30px;
+  }
+
+  .footer-center {
+    width: 100%;
+    margin-bottom: 60px;
+    padding-right: 30px;
+  }
+
+  .footer-right {
+    width: 100%;
+    margin-bottom: 60px;
+    padding-right: 30px;
+  }
+
+}
+
+@media screen and (max-width:700px){
+  .btn-sub{
+    margin: 0;
+    margin-top: 20px;
+  }
+
+}
 
 .top-social a {
   color: #000; }
