--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,27 @@
 html {
   overflow-x: hidden; }
 
+  :root{
+
+    /*      Theme colors        */
+    --text-gray: #3f4954;
+    --text-light : #686666da;
+    --bg-color: #0f0f0f;
+    --white: #ffffff;
+    --midnight: #104f55;
+
+    /* gradient color   */
+    --sky: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
+
+    /*      theme font-family   */
+    --Abel: 'Abel', sans-serif;
+    --Anton: 'Anton', cursive;
+    --Josefin : 'Josefin', cursive;
+    --Lexend: 'Lexend', sans-serif;
+    --Livvic : 'Livvic', sans-serif;
+}
+
+
 body {
   line-height: 1.7;
   color: gray;
@@ -234,6 +255,60 @@ h1, h2, h3, h4, h5,
 .site-logo {
   font-size: 2rem;
   color: #000; }
+
+.sitelogo-img {
+  width: 100%;
+}
+
+@media screen and (max-width: 995px) {
+  .sitelogo-img{
+    width: 70%;
+    margin-top: -20px;
+  }
+}
+
+.site-title {
+  background: url(../jannik-crop.jpg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center center;
+  justify-content: center;
+  padding-bottom: 150px;
+}
+
+.site-title .site-background {
+  padding-top: 10rem;
+  text-align: center;
+  color: var(--white);
+}
+
+.site-background h1 {
+  font-family: var(--Lexend);
+  font-size: 2.5rem;
+}
+
+.site-background h3 {
+  font-family: var(--Abel);
+  font-size: 1.3rem;
+}
+
+.btn-explore {
+  border: none;
+  border-radius: 2rem;
+  padding: 1rem 3rem;
+  font-size: 1rem;
+  font-family: var(--Livvic);
+  cursor: pointer;
+}
+
+.site-title {
+  margin: .3rem;
+}
+
+.site-title .btn-explore {
+  margin: 1.8rem;
+  background: var(--sky);
+}
 
 .site-navbar {
   margin-bottom: 0px;
@@ -1056,50 +1131,6 @@ h1, h2, h3, h4, h5,
     color: #000;
     font-style: italic; }
 
-.comment-form-wrap {
-  clear: both; }
-
-.comment-list {
-  padding: 0;
-  margin: 0; }
-  .comment-list .children {
-    padding: 50px 0 0 40px;
-    margin: 0;
-    float: left;
-    width: 100%; }
-  .comment-list li {
-    padding: 0;
-    margin: 0 0 30px 0;
-    float: left;
-    width: 100%;
-    clear: both;
-    list-style: none; }
-    .comment-list li .vcard {
-      width: 80px;
-      float: left; }
-      .comment-list li .vcard img {
-        width: 50px;
-        border-radius: 50%; }
-    .comment-list li .comment-body {
-      float: right;
-      width: calc(100% - 80px); }
-      .comment-list li .comment-body h3 {
-        font-size: 18px;
-        color: #000; }
-      .comment-list li .comment-body .meta {
-        text-transform: uppercase;
-        font-size: 13px;
-        letter-spacing: .1em;
-        color: #ccc; }
-      .comment-list li .comment-body .reply {
-        padding: 5px 10px;
-        background: #e6e6e6;
-        color: #000;
-        text-transform: uppercase;
-        font-size: 14px; }
-        .comment-list li .comment-body .reply:hover {
-          color: #000;
-          background: #e3e3e3; }
 
 .post-meta {
   font-size: .8rem; }
@@ -1296,6 +1327,134 @@ h1, h2, h3, h4, h5,
 .search-form p {
   font-size: .9rem; }
 
+
+
+.top-social a {
+  color: #000; }
+  .top-social a:hover {
+    color: #777; }
+
+.single-content h1 {
+  color: #000;
+  font-family: "Big Caslon", "Book Antiqua", "Palatino Linotype", Georgia, serif;
+  font-size: 26px;
+  font-style: normal;
+  font-variant: normal;
+  font-weight: bold;
+  line-height: 26px; }
+
+  .single-content h2 {
+  color: #000;
+  font-family: "Big Caslon", "Book Antiqua", "Palatino Linotype", Georgia, serif;
+  font-size: 22px;
+  font-style: normal;
+  font-variant: normal;
+  font-weight: bold;
+  line-height: 2; }
+    
+.single-conten h3 { font-family: "Big Caslon", "Book Antiqua", "Palatino Linotype", Georgia, serif; font-size: 14px; font-style: normal; font-variant: normal; font-weight: bold; line-height: 15px; }
+
+.single-content {
+  color: #373D3F;
+ font-family: "Big Caslon", "Book Antiqua", "Palatino Linotype", Georgia, serif;
+ font-size: 16px;
+ font-style: normal;
+ font-variant: normal;
+ font-weight: 400;
+ line-height: 1.7; } 
+
+.single-content il{
+  display: inline-block;
+  text-align: left;
+  list-style: inside;
+}
+
+blockquote {
+  margin: 4rem 0;
+  padding: 4rem 4rem;
+  border-left: 4px solid black;
+  position: relative;
+  font-family: "Big Caslon", "Book Antiqua", "Palatino Linotype", Georgia, serif; 
+  font-style: normal;
+  font-variant: normal;
+  font-weight: 400;
+  line-height: 30px; 
+  }
+
+.banner {
+    width: 100%;
+    height: 400px;
+    background-image: url('JannikSchilling.png');
+    background-position: center center;
+    background-size: cover;
+  }
+
+.hero-image {
+    background-image: url("../jannik-crop.jp2");
+    background-color: #cccccc;
+    height: 600px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+  }
+
+  .container-hero{
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,50%);
+    overflow: hidden;
+    text-align: center;
+    color: white;
+    font-weight: 700;
+    text-transform: uppercase;
+  }
+
+
+
+  .container h1 span {
+    border: 10px solid white;
+    padding: 6px 14px;
+  }
+
+  .phys {
+    margin: 20px;
+    display: block;
+    font-size: 26px;
+    text-shadow: 0 0 10px black;
+  }
+
+  .btn-me{
+    position: relative;
+    border: 0;
+    border-radius: 60%;
+    padding: 15px 25px;
+    display: inline-block;
+    text-align: center;
+    color: white;
+    background-color: #8bc34a;
+    font-size: 20px;
+  }
+
+ 
+  
+  .btn:hover{
+    opacity: 0.8;
+    color: #313131
+    }
+  
+  .hero-text {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+  }
+
+/* ------------ FOOTER ----------- */
+
 footer {
   background: #fff;
   padding: 90px 0;
@@ -1433,127 +1592,3 @@ footer {
   }
 
 }
-
-.top-social a {
-  color: #000; }
-  .top-social a:hover {
-    color: #777; }
-
-.single-content h1 {
-  color: #000;
-  font-family: "Big Caslon", "Book Antiqua", "Palatino Linotype", Georgia, serif;
-  font-size: 26px;
-  font-style: normal;
-  font-variant: normal;
-  font-weight: bold;
-  line-height: 26px; }
-
-  .single-content h2 {
-  color: #000;
-  font-family: "Big Caslon", "Book Antiqua", "Palatino Linotype", Georgia, serif;
-  font-size: 22px;
-  font-style: normal;
-  font-variant: normal;
-  font-weight: bold;
-  line-height: 2; }
-    
-.single-conten h3 { font-family: "Big Caslon", "Book Antiqua", "Palatino Linotype", Georgia, serif; font-size: 14px; font-style: normal; font-variant: normal; font-weight: bold; line-height: 15px; }
-
-.single-content {
-  color: #373D3F;
- font-family: "Big Caslon", "Book Antiqua", "Palatino Linotype", Georgia, serif;
- font-size: 16px;
- font-style: normal;
- font-variant: normal;
- font-weight: 400;
- line-height: 1.7; } 
-
-.single-content il{
-  display: inline-block;
-  text-align: left;
-  list-style: inside;
-}
-
-blockquote {
-  margin: 4rem 0;
-  padding: 4rem 4rem;
-  border-left: 4px solid black;
-  position: relative;
-  font-family: "Big Caslon", "Book Antiqua", "Palatino Linotype", Georgia, serif; 
-  font-style: normal;
-  font-variant: normal;
-  font-weight: 400;
-  line-height: 30px; 
-  }
-
-.banner {
-    width: 100%;
-    height: 400px;
-    background-image: url('JannikSchilling.png');
-    background-position: center center;
-    background-size: cover;
-  }
-
-.hero-image {
-    background-image: url("../jannik-crop.jp2");
-    background-color: #cccccc;
-    height: 600px;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-  }
-
-  .container-hero{
-    position: relative;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,50%);
-    overflow: hidden;
-    text-align: center;
-    color: white;
-    font-weight: 700;
-    text-transform: uppercase;
-  }
-
-
-
-  .container h1 span {
-    border: 10px solid white;
-    padding: 6px 14px;
-  }
-
-  .phys {
-    margin: 20px;
-    display: block;
-    font-size: 26px;
-    text-shadow: 0 0 10px black;
-  }
-
-  .btn-me{
-    position: relative;
-    border: 0;
-    border-radius: 60%;
-    padding: 15px 25px;
-    display: inline-block;
-    text-align: center;
-    color: white;
-    background-color: #8bc34a;
-    font-size: 20px;
-  }
-
- 
-  
-  .btn:hover{
-    opacity: 0.8;
-    color: #313131
-    }
-  
-  .hero-text {
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-  }
