--- a/css/style.css
+++ b/css/style.css
@@ -30,11 +30,11 @@ body {
   font-size: .9rem; }
 
 ::-moz-selection {
-  background: #000;
+  background: #282828;
   color: #fff; }
 
 ::selection {
-  background: #000;
+  background: #282828;
   color: #fff; }
 
 a {
@@ -61,14 +61,14 @@ h1, h2, h3, h4, h5,
     line-height: 6rem;
     text-indent: 0;
     background: transparent;
-    color: #000000;
+    color: #282828282828;
   }
 
 .text-black {
-  color: #000 !important; }
+  color: #282828 !important; }
 
 .bg-black {
-  background: #000 !important; }
+  background: #282828 !important; }
 
 .color-black-opacity-5 {
   color: rgba(0, 0, 0, 0.5); }
@@ -84,7 +84,7 @@ h1, h2, h3, h4, h5,
   background: rgba(0, 0, 0, 0.6);
   content: "";
   position: absolute;
-  z-index: 2000;
+  z-index: 2282828;
   top: 0;
   left: 0;
   right: 0;
@@ -104,7 +104,7 @@ h1, h2, h3, h4, h5,
   line-height: 1 !important; }
 
 .bg-black {
-  background: #000; }
+  background: #282828; }
 
 .site-section {
   padding: 2.5em 0; }
@@ -128,9 +128,9 @@ h1, h2, h3, h4, h5,
 
 .bg-text-line {
   display: inline;
-  background: #000;
-  -webkit-box-shadow: 20px 0 0 #000, -20px 0 0 #000;
-  box-shadow: 20px 0 0 #000, -20px 0 0 #000; }
+  background: #282828;
+  -webkit-box-shadow: 20px 0 0 #282828, -20px 0 0 #282828;
+  box-shadow: 20px 0 0 #282828, -20px 0 0 #282828; }
 
 .text-white-opacity-05 {
   color: rgba(255, 255, 255, 0.5); }
@@ -231,9 +231,9 @@ h1, h2, h3, h4, h5,
   .ul-check.white li:before {
     color: #fff; }
   .ul-check.success li:before {
-    color: #8bc34a; }
+    color: #282828; }
   .ul-check.primary li:before {
-    color: #8bc34a; }
+    color: #282828; }
 
 .select-wrap, .wrap-icon {
   position: relative; }
@@ -254,7 +254,7 @@ h1, h2, h3, h4, h5,
 /* Navbar */
 .site-logo {
   font-size: 2rem;
-  color: #000; }
+  color: #282828; }
 
 .sitelogo-img {
   width: 100%;
@@ -323,7 +323,8 @@ h1, h2, h3, h4, h5,
     padding-left: 0;
     margin-bottom: 0; }
     .site-navbar .site-navigation .site-menu .active > a {
-      color: #000;
+      color: #282828;
+      font-weight: bold;
       display: inline-block;
       padding-left: 10px;
       padding-right: 10px; }
@@ -341,9 +342,9 @@ h1, h2, h3, h4, h5,
         font-weight: 400;
         display: inline-block;
         text-decoration: none !important;
-        color: #000; }
+        color: #282828; }
         .site-navbar .site-navigation .site-menu > li > a:hover {
-          color: #000; }
+          color: #282828; }
     .site-navbar .site-navigation .site-menu .has-children {
       position: relative; }
       .site-navbar .site-navigation .site-menu .has-children > a {
@@ -365,7 +366,7 @@ h1, h2, h3, h4, h5,
         top: 100%;
         position: absolute;
         text-align: left;
-        border-top: 2px solid #000;
+        border-top: 2px solid #282828;
         -webkit-box-shadow: 0 2px 10px -2px rgba(0, 0, 0, 0.1);
         box-shadow: 0 2px 10px -2px rgba(0, 0, 0, 0.1);
         border-left: 1px solid #edf0f5;
@@ -403,7 +404,7 @@ h1, h2, h3, h4, h5,
           transition: 0s all;
           color: #343a40; }
         .site-navbar .site-navigation .site-menu .has-children .dropdown .active > a {
-          color: #8bc34a !important; }
+          color: #282828 !important; }
         .site-navbar .site-navigation .site-menu .has-children .dropdown > li {
           list-style: none;
           padding: 0;
@@ -425,7 +426,7 @@ h1, h2, h3, h4, h5,
             background: #f4f5f9;
             color: #25262a; }
       .site-navbar .site-navigation .site-menu .has-children:hover > a, .site-navbar .site-navigation .site-menu .has-children:focus > a, .site-navbar .site-navigation .site-menu .has-children:active > a {
-        color: #000; }
+        color: #282828; }
       .site-navbar .site-navigation .site-menu .has-children:hover, .site-navbar .site-navigation .site-menu .has-children:focus, .site-navbar .site-navigation .site-menu .has-children:active {
         cursor: pointer; }
         .site-navbar .site-navigation .site-menu .has-children:hover > .dropdown, .site-navbar .site-navigation .site-menu .has-children:focus > .dropdown, .site-navbar .site-navigation .site-menu .has-children:active > .dropdown {
@@ -436,13 +437,13 @@ h1, h2, h3, h4, h5,
           visibility: visible;
           opacity: 1; }
     .site-navbar .site-navigation .site-menu.site-menu-dark > li > a {
-      color: #000; }
+      color: #282828; }
 
 .site-mobile-menu {
   width: 300px;
   position: fixed;
   right: 0;
-  z-index: 2000;
+  z-index: 2282828;
   padding-top: 20px;
   background: #fff;
   height: calc(100vh);
@@ -507,12 +508,12 @@ h1, h2, h3, h4, h5,
       position: relative;
       color: #212529; }
       .site-mobile-menu .site-nav-wrap a:hover {
-        color: #8bc34a; }
+        color: #282828; }
     .site-mobile-menu .site-nav-wrap li {
       position: relative;
       display: block; }
       .site-mobile-menu .site-nav-wrap li.active > a {
-        color: #8bc34a !important; }
+        color: #282828 !important; }
     .site-mobile-menu .site-nav-wrap .arrow-collapse {
       position: absolute;
       right: 0px;
@@ -594,24 +595,24 @@ h1, h2, h3, h4, h5,
     transition: .3s all ease;
     border-bottom: 1px solid #efefef; }
     .sticky-wrapper .site-navbar .site-logo a {
-      color: #000; }
+      color: #282828; }
     .sticky-wrapper .site-navbar .site-menu > li {
       display: inline-block; }
       .sticky-wrapper .site-navbar .site-menu > li.active > a {
-        color: #000; }
+        color: #282828; }
   .sticky-wrapper.is-sticky .site-navbar .site-logo a {
-    color: #000; }
+    color: #282828; }
   .sticky-wrapper.is-sticky .site-navbar .site-menu > li {
     display: inline-block; }
     .sticky-wrapper.is-sticky .site-navbar .site-menu > li > a {
       display: inline-block;
       text-decoration: none !important; }
       .sticky-wrapper.is-sticky .site-navbar .site-menu > li > a:hover {
-        color: #000; }
+        color: #282828; }
       .sticky-wrapper.is-sticky .site-navbar .site-menu > li > a.active:after {
-        background: #8bc34a; }
+        background: #282828; }
     .sticky-wrapper.is-sticky .site-navbar .site-menu > li.active > a {
-      color: #000; }
+      color: #282828; }
   .sticky-wrapper .shrink {
     padding-top: 10px !important;
     padding-bottom: 10px !important; }
@@ -704,10 +705,14 @@ h1, h2, h3, h4, h5,
         margin: 2px 5px;
         background: rgba(0, 0, 0, 0.2); }
       .owl-slide-3 .owl-dots .owl-dot.active > span, .owl-slide .owl-dots .owl-dot.active > span, .owl-style .owl-dots .owl-dot.active > span {
-        background: #8bc34a; }
+        background: #282828; }
 
 .owl-slide .owl-nav {
   display: none; }
+
+a {
+  color: #282828;
+}
 
 @media (max-width: 991.98px) {
   .owl-style .owl-nav {
@@ -731,7 +736,7 @@ h1, h2, h3, h4, h5,
   -webkit-transition: opacity .2s ease-out, visibility 0s linear .2s;
   -o-transition: opacity .2s ease-out, visibility 0s linear .2s;
   transition: opacity .2s ease-out, visibility 0s linear .2s;
-  z-index: 2000; }
+  z-index: 2282828; }
 
 #loader.fullscreen {
   padding: 0;
@@ -834,13 +839,13 @@ h1, h2, h3, h4, h5,
       left: -20px;
       border-top: 40px solid transparent;
       border-bottom: 40px solid transparent;
-      border-right: 40px solid #8bc34a; }
+      border-right: 40px solid #282828; }
     .services-1-wrap .service-1 .service-1-icon > span {
-      color: #000;
+      color: #282828;
       font-size: 4rem; }
   .services-1-wrap .service-1 .service-1-content .service-heading {
     font-size: 1.5rem;
-    color: #000;
+    color: #282828;
     font-weight: 400; }
   .services-1-wrap .service-1 .service-1-content p {
     font-size: 15px; }
@@ -860,7 +865,7 @@ h1, h2, h3, h4, h5,
 
 .header-top .quick-contact-icons .text .h4 {
   font-size: 1.2rem;
-  color: #000;
+  color: #282828;
   margin-bottom: 0; }
 
 .header-top .quick-contact-icons .text .caption-text {
@@ -878,11 +883,12 @@ h1, h2, h3, h4, h5,
   margin-bottom: 14rem; }
 
 .section-title {
-  color: #000;
+  color: #282828;
   margin-bottom: 50px; }
-  .section-title h2 {
-    font-size: 20px;
+  /*.section-title h2 {
+    font-size: 40px;
     font-weight: 400;
+    font-family: "Montserrat";
     border-bottom: 1px solid #222;
     position: relative;
     display: inline-block; }
@@ -890,11 +896,11 @@ h1, h2, h3, h4, h5,
       position: absolute;
       content: "";
       height: 1px;
-      background: #777; }
+      background: #777; }*/
 
 .section-subtitle {
   font-weight: 300;
-  color: #8bc34a;
+  color: #282828;
   text-transform: uppercase;
   font-size: 1.3rem; }
 
@@ -944,7 +950,7 @@ h1, h2, h3, h4, h5,
     opacity: 0;
     visibility: hidden; }
     .project-item .project-item-contents .project-item-category {
-      color: #8bc34a;
+      color: #282828;
       font-family: "Cabin", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
       text-transform: uppercase; }
     .project-item .project-item-contents .project-item-title {
@@ -1003,8 +1009,8 @@ h1, h2, h3, h4, h5,
     color: #fff; }
 
 .quote-form .btn-primary:hover {
-  background: #000;
-  border-color: #000;
+  background: #282828;
+  border-color: #282828;
   color: #fff; }
 
 .person {
@@ -1022,9 +1028,9 @@ h1, h2, h3, h4, h5,
   .person .person-contents {
     text-align: center; }
     .person .person-contents h3 {
-      color: #000; }
+      color: #282828; }
     .person .person-contents .position {
-      color: #8bc34a; }
+      color: #282828; }
   .person:hover img {
     -webkit-transform: scale(1.05);
     -ms-transform: scale(1.05);
@@ -1049,7 +1055,7 @@ h1, h2, h3, h4, h5,
         -ms-transform: translate(-50%, -50%);
         transform: translate(-50%, -50%); }
       .person .social a:hover {
-        background: #000;
+        background: #282828;
         color: #fff; }
 
 .testimonial img {
@@ -1060,14 +1066,14 @@ h1, h2, h3, h4, h5,
 
 .testimonial blockquote p {
   font-size: 20px;
-  color: #000;
+  color: #282828;
   font-weight: 700; }
 
 .testimonial .client-name {
   font-family: "Cabin", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   text-transform: uppercase;
   font-size: 1.2rem;
-  color: #8bc34a; }
+  color: #282828; }
 
 .blog-entry .img-link {
   display: block;
@@ -1086,7 +1092,7 @@ h1, h2, h3, h4, h5,
 .blog-entry .blog-entry-contents h3 {
   line-height: 1; }
   .blog-entry .blog-entry-contents h3 a {
-    color: #000;
+    color: #282828;
     font-weight: 400;
     font-size: 1.5rem; }
 
@@ -1095,7 +1101,7 @@ h1, h2, h3, h4, h5,
   .blog-entry .blog-entry-contents .meta, .blog-entry .blog-entry-contents .meta a {
     color: #b0b0b0; }
   .blog-entry .blog-entry-contents .meta a {
-    color: #8bc34a; }
+    color: #282828; }
 
 .sidebar-box {
   margin-bottom: 30px;
@@ -1128,14 +1134,14 @@ h1, h2, h3, h4, h5,
       top: 0;
       color: #ccc; }
   .categories li.active a, .sidelink li.active a {
-    color: #000;
+    color: #282828;
     font-style: italic; }
 
 
 .post-meta {
   font-size: .8rem; }
   .post-meta a {
-    color: #000; }
+    color: #282828; }
 
 .bio-pic {
   -webkit-box-flex: 0;
@@ -1157,7 +1163,7 @@ h1, h2, h3, h4, h5,
   .post-entry-1 h2, .post-entry-2 h2 {
     font-size: 20px; }
     .post-entry-1 h2 a, .post-entry-2 h2 a {
-      color: #000; }
+      color: #282828; }
 
 .post-entry-2 {
   font-size: .9rem; }
@@ -1194,7 +1200,7 @@ h1, h2, h3, h4, h5,
   .trend-entry .trend-contents h2 {
     font-size: 18px; }
     .trend-entry .trend-contents h2 a {
-      color: #000; }
+      color: #282828; }
 
 .caption {
   font-size: .9rem;
@@ -1223,17 +1229,22 @@ h1, h2, h3, h4, h5,
 .half-post-entry .contents {
   padding: 50px;
   font-size: .9rem;
-  height: auto; }
+  height: auto; 
+}
   @media (max-width: 991.98px) {
     .half-post-entry .contents {
       padding: 30px; } }
   .half-post-entry .contents h2 {
     font-size: 26px; }
     .half-post-entry .contents h2 a {
-      color: #000; }
+      color: #282828; }
+
+.half-post-entry{
+  margin-bottom: 50px;
+}
 
 .more {
-  color: #8bc34a;
+  color: #282828;
   text-transform: uppercase;
   font-size: .83rem; }
 
@@ -1241,7 +1252,7 @@ h1, h2, h3, h4, h5,
   padding: 0;
   margin: 0;
   font-size: .89rem;
-  color: #000; }
+  color: #282828; }
   .custom-pagination li {
     display: inline-block; }
     .custom-pagination li a {
@@ -1249,9 +1260,9 @@ h1, h2, h3, h4, h5,
       display: inline-block;
       color: #b3b3b3; }
       .custom-pagination li a:hover {
-        color: #000; }
+        color: #282828; }
     .custom-pagination li.active a {
-      color: #000; }
+      color: #282828; }
 
 .form-control {
   margin-right: 10px;
@@ -1268,10 +1279,10 @@ h1, h2, h3, h4, h5,
 
 .btn {
   border-radius: 30px;
-  background: #000;
+  background: #282828;
   padding-left: 20px;
   padding-right: 20px;
-  border-color: #000;
+  border-color: #282828;
   color: #fff; }
 
 .subscribe form .form-control {
@@ -1289,17 +1300,17 @@ h1, h2, h3, h4, h5,
 
 .subscribe form .btn {
   border-radius: 30px;
-  background: #000;
+  background: #282828;
   padding-left: 20px;
   padding-right: 20px;
-  border-color: #000; }
+  border-color: #282828; }
   .subscribe form .btn:hover {
-    background: #8bc34a;
-    border-color: #8bc34a; }
+    background: #282828;
+    border-color: #282828; }
 
 .subscribe form h2 {
   font-size: 1.2rem;
-  color: #000; }
+  color: #282828; }
 
 .subscribe form p {
   font-size: .9rem; }
@@ -1319,17 +1330,17 @@ h1, h2, h3, h4, h5,
 
 .search-form .btn {
   border-radius: 30px;
-  background: #000;
+  background: #282828;
   padding-left: 20px;
   padding-right: 20px;
-  border-color: #000; }
+  border-color: #282828; }
   .search-form .btn:hover {
-    background: #8bc34a;
-    border-color: #8bc34a; }
+    background: #282828;
+    border-color: #282828; }
 
 .search-form h2 {
   font-size: 1.2rem;
-  color: #000; }
+  color: #282828; }
 
 .search-form p {
   font-size: .9rem; }
@@ -1337,12 +1348,12 @@ h1, h2, h3, h4, h5,
 
 
 .top-social a {
-  color: #000; }
+  color: #282828; }
   .top-social a:hover {
     color: #777; }
 
 .single-content h1 {
-  color: #000;
+  color: #282828;
   font-family: "Big Caslon", "Book Antiqua", "Palatino Linotype", Georgia, serif;
   font-size: 26px;
   font-style: normal;
@@ -1351,7 +1362,7 @@ h1, h2, h3, h4, h5,
   line-height: 26px; }
 
   .single-content h2 {
-  color: #000;
+  color: #282828;
   font-family: "Big Caslon", "Book Antiqua", "Palatino Linotype", Georgia, serif;
   font-size: 22px;
   font-style: normal;
@@ -1440,7 +1451,7 @@ blockquote {
     display: inline-block;
     text-align: center;
     color: white;
-    background-color: #8bc34a;
+    background-color: #282828;
     font-size: 20px;
   }
 
@@ -1598,4 +1609,8 @@ footer {
     margin-top: 20px;
   }
 
+}
+
+h2 {
+  color: #282828;
 }
