--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ h1, h2, h3, h4, h5,
     line-height: 6rem;
     text-indent: 0;
     background: transparent;
-    color: #282828282828;
+    color: #282828;
   }
 
 .text-black {
