--- a/css/style.css
+++ b/css/style.css
@@ -55,10 +55,10 @@ h1, h2, h3, h4, h5,
     float: left;
     margin: 0;
     padding: 1.6rem 0.8rem 0 0;
-    font-family: "Lora", serif;
-    font-weight: 700;
-    font-size: 8.6rem;
-    line-height: 6rem;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 500;
+    font-size: 6.6rem;
+    line-height: 4rem;
     text-indent: 0;
     background: transparent;
     color: #282828;
@@ -105,6 +105,11 @@ h1, h2, h3, h4, h5,
 
 .bg-black {
   background: #282828; }
+
+.site-section p{
+  font-size: 13pt;
+  font-family: "Cabin", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; 
+}
 
 .site-section {
   padding: 2.5em 0; }
@@ -885,6 +890,18 @@ a {
 .section-title {
   color: #282828;
   margin-bottom: 50px; }
+
+.section-title .h2{
+  color: #282828;
+}
+
+h2.tit{
+  color:#282828;
+}
+
+h2.tit:hover{
+  color: #fc5c65;
+}
   /*.section-title h2 {
     font-size: 40px;
     font-weight: 400;
@@ -1408,13 +1425,25 @@ blockquote {
   }
 
 .hero-image {
-    background-image: url("../jannik-crop.jp2");
+    background-image: url("../tafel.jpg");
     background-color: #cccccc;
     height: 600px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
+    margin-bottom: 50px;
+  }
+
+  .hero-text {
+    font-size: 100px;
+    color: #282828;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
   }
 
   .container-hero{
@@ -1462,14 +1491,6 @@ blockquote {
     color: #313131
     }
   
-  .hero-text {
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-  }
 
 /* ------------ FOOTER ----------- */
 
@@ -1493,6 +1514,22 @@ footer {
   width: 33.33%;
   float: left;
   padding-left: 50px;
+}
+
+.footer-links a{
+  color: #282828;
+}
+
+.footer-links a:hover {
+  color: #fc5c65;
+}
+
+.contents a {
+  color: #282828;
+}
+
+.contents a:hover{
+  color: #fc5c65;
 }
 
 .footer-center{
