--- a/css/bootstrap/bootstrap.css
+++ b/css/bootstrap/bootstrap.css
@@ -3231,9 +3231,12 @@ input[type="button"].btn-block {
 
 .nav-link {
   display: block;
-  padding: 0.5rem 1rem; }
+  padding: 0.5rem 1rem;
+  transition: .3s linear;
+  color: #282828; }
   .nav-link:hover, .nav-link:focus {
-    text-decoration: none; }
+    text-decoration: none;
+    color: #fc5c65 }
   .nav-link.disabled {
     color: #6c757d; }
 
@@ -7155,7 +7158,15 @@ button.bg-dark:focus {
   white-space: nowrap; }
 
 .text-left {
-  text-align: left !important; }
+  text-align: left !important;
+    color: #282828;
+    text-decoration: none;
+    transition: .3s linear;
+  }
+  
+.text-left:hover{
+  color: #fc5c65;
+}
 
 .text-right {
   text-align: right !important; }
