--- a/css/style.css
+++ b/css/style.css
@@ -1562,7 +1562,7 @@ footer {
 
 
 .social-media a {
-  color: #001a21;
+  color: #282828;
   margin-right: 25px;
   font-size: 22px;
   text-decoration: none;
@@ -1572,6 +1572,28 @@ footer {
 .social-media a:hover{
   color: #fc5c65;
 }
+
+a.nav-link {
+  color: #282828;
+  text-decoration: none;
+  transition: .3s linear;
+}
+
+a.nav-link:hover{
+  color: #fc5c65;
+}
+
+a.text-left {
+  color: #282828;
+  text-decoration: none;
+  transition: .3s linear;
+}
+
+a.text-left:hover{
+  color: #fc5c65;
+}
+
+
 
 .right-col h1{
   font-size: 26px;
