--- a/css/style.css
+++ b/css/style.css
@@ -1706,3 +1706,12 @@ h2 a.sec-tit {
 h2 a.sec-tit:hover{
   color: #fc5c65;
 }
+
+a.aboutlink {
+  color: #282828;
+  text-decoration: none;
+  transition: .3s linear;
+}
+a.aboutlink:hover{
+  color: #fc5c65;
+}
