--- a/css/style.css
+++ b/css/style.css
@@ -1723,13 +1723,14 @@ a.aboutlink:hover{
 .middle {
   position: relative;
   width: 100%;
-  margin-bottom: 70px;
+  margin-bottom: 30px;
   margin-top: -40px;
 }
 
 @media (min-width: 776px) {
   .middle {
     margin-top: -180px;
+    margin-bottom: -70px;
   }
 }
 
@@ -1761,4 +1762,41 @@ a.aboutlink:hover{
 .num {
   font-size: 40px;
   margin: 20px 0;
+}
+
+/* Testimonial */
+
+.testimonial-container {
+  width: 100%;
+  background: #f8f9fa;
+  padding: 40px;
+  position: relative;
+  text-align: center;
+  margin-bottom: 120px;
+}
+
+.client {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.client img {
+  width: 60px;
+  height: 60px;
+  border-radius: 50px;
+  border: 3px solid #333;
+  margin: 0 10px;
+}
+
+.client span {
+  display: block;
+}
+
+.text-name {
+  font-weight: 600;
+}
+
+.test-job {
+ color: #333; 
 }
